docs: update swagger docs
